Cambios en el diseño

--- a/index.html
+++ b/index.html
@@ -1,8 +1,20 @@
 <!DOCTYPE html>
 <html>
+<head>
+	<link rel="stylesheet" type="text/css" href="index.css">
+	<title>El bog de kinley</title>
+</head>
+
 <body>
-Hello World
+
+	<h1>Bienvenid@</h1>
+	<div class="hero">
+		<h2>Kinley</h2>
+		<p>Un ser exquisito del planeta</p>
+		<a href="#">Leelo ahora.</a>
+	</div>
+	
+	<p id = "footer">&copy; Kinley producciones</p>
+
 </body>
-
 </html>
-
