--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <body>
 
-	<h1>Bienvenid@</h1>
+	<h1>Bienvenid@s</h1>
 	<div class="hero">
 		<h2>Kinley</h2>
 		<p>Un ser exquisito del planeta</p>
