--- a/index.html
+++ b/index.html
@@ -2,18 +2,89 @@
 <html>
 <head>
 	<link rel="stylesheet" type="text/css" href="index.css">
-	<title>El bog de kinley</title>
+	<title>La web de kinley</title>
 </head>
 
 <body>
 
-	<h1>Bienvenid@s</h1>
-	<div class="hero">
-		<h2>Kinley</h2>
-		<p>Un ser exquisito del planeta</p>
-		<a href="#">Leelo ahora.</a>
+<header>
+	<div class="logo">
+		<img class="logo" src="https://upload.wikimedia.org/wikipedia/en/6/64/KylieXLogo-K.png" width="160" height="160">
 	</div>
-	
+	<div class="encabezado">
+		<h1>Kinley's web</h1>
+	    <p>Es la web donde podras encontrar todo lo que le pertenece a un <a href="wwww.google.com">kinley</a> y mas. Tips y sesiones de n cosas.</p>
+    </div>
+</header>
+
+
+<div id="mainwrapper"><!-- This #mainwrapper section contains all of our images to make them center and look proper in the browser ->
+    <!-- Image Caption 1 -->
+    <div id="box-3" class="box">
+        <img id="image-3" src="https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-3/moss1.jpg"/>
+        <span class="caption fade-caption">
+        <h3>Programacion</h3>
+        </span>
+    </div>
+ 
+    <!-- Image Caption 2 -->
+    <div id="box-3" class="box">
+        <img id="image-3" src="https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-3/moss2.jpg"/>
+        <span class="caption fade-caption">
+        <h3>League of Legends</h3>
+        </span>
+    </div>
+ 
+    <!-- Image Caption 3 -->
+    <div id="box-3" class="box">
+        <img id="image-3" src="https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-3/moss3.jpg"/>
+        <span class="caption fade-caption">
+        <h3>Universidad</h3>
+        </span>
+    </div>
+     
+    <!-- Image Caption 4 -->
+    <div id="box-3" class="box">
+        <img id="image-3" src="https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-3/moss4.jpg"/>
+        <span class="caption fade-caption">
+        <h3>Bachillerato</h3>
+        </span>
+    </div>
+     
+    <!-- Image Caption 5 -->
+    <div id="box-3" class="box">
+        <img id="image-3" src="https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-3/moss5.jpg"/>
+        <span class="caption fade-caption">
+        <h3>Fracasos</h3>
+        </span>
+    </div>
+ 
+    <!-- Image Caption 6 -->
+    <div id="box-3" class="box">
+        <img id="image-3" src="https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-3/moss6.jpg"/>
+        <span class="caption fade-caption">
+        <h3>Musica</h3>
+        </span>
+    </div>
+</div> <!-- end of #mainwrapper-->
+
+
+      <nav>
+      <ul>
+        <li><a href="#"><b>Arctic</b></a></li>
+        <li><a href="#">Alpine</a></li>
+        <li><a href="#">Antarctic</a></li>
+      </ul>
+      <div class="contact-btn"><a>SIGANOS EN NUESTRAS PAGINAS</a>
+      </div>
+    </nav>
+
+<div class="hero">
+	<h2>Kinley</h2>
+	<p>Un ser exquisito del planeta</p>
+	<a href="#">Leelo ahora.</a>
+</div>
+
 	<p id = "footer">&copy; Kinley producciones</p>
 
 </body>
