--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta name="tipo_contenido"  content="text/html;" http-equiv="content-type" charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="index.css">
+	<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Josefin Slab">
+	<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Open Sans">
 	<title>La web de kinley</title>
 </head>
 
@@ -13,7 +16,7 @@
 	</div>
 	<div class="encabezado">
 		<h1>Kinley's web</h1>
-	    <p>Es la web donde podras encontrar todo lo que le pertenece a un <a href="wwww.google.com">kinley</a> y mas. Tips y sesiones de n cosas.</p>
+	    <p>Es la web donde podrás encontrar todo lo que le pertenece a un <a href="wwww.google.com">kinley</a> y mas. Tips y sesiones de n cosas.</p>
     </div>
 </header>
 
