--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 	<br><center><a href="http://www.up.edu.pe/internacional" target="_blank"><button>¿Quiénes somos?</button></a>
 	<button>Actividades</button>
-	<button>Match Buddy!</button></center>
+	<button><a href="w3.php" target="_blank" style="text-decoration:none">Match Buddy!</button></a></center>
 
 	<br><center><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c3/Flag_of_France.svg/200px-Flag_of_France.svg.png" width="200" height="100"/>
 	<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/ea/Flag_of_Peru_%281825-1950%29.svg/220px-Flag_of_Peru_%281825-1950%29.svg.png" width="200" height="100"/>
