--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>Home | Marketing Agency template</title>
+    <title>Masajes | Intikilla</title>
     <meta name="description" content="Page-specific description">
     <meta name="keywords" content="Page-specific keywords">
     <link rel="shortcut icon" href="favicon.ico">
@@ -27,9 +27,9 @@
             <div class="container">
                 <nav class="first-nav__links">
                     <ul>
-                        <li><a class="is-selected">english</a></li>
-                        <li><a href="#">français</a></li>
-                        <li><a href="#">deutsch</a></li>
+                        <li><a class="is-selected">castellano</a></li>
+                        <li><a href="#">inglés</a></li>
+                        <li><a href="#">holandes</a></li>
                     </ul>
                 </nav><a class="first-nav__navcontrol icon icon_menu js-navcontrol" href="#">Menu</a>
             </div>
