--- a/index.html
+++ b/index.html
@@ -39,13 +39,13 @@
                 <nav class="menu">
                     <ul>
                         <li><a class="js-link js-anchor is-selected" href="#home">Home</a></li>
-                        <li><a class="js-link js-anchor" href="#about">About</a></li>
-                        <li><a class="js-link js-anchor" href="#services">Services</a></li>
-                        <li><a class="js-link js-anchor" href="#process">Process</a></li>
+                        <li><a class="js-link js-anchor" href="#about">Nosotros</a></li>
+                        <li><a class="js-link js-anchor" href="#services">Servicios</a></li>
+                        <li><a class="js-link js-anchor" href="#process">Reserva</a></li>
                         <li><a class="js-link js-anchor" href="#projects">Projects</a></li>
-                        <li><a class="js-link js-anchor" href="#testimonials">Testimonials</a></li>
-                        <li><a class="js-link js-anchor" href="#team">Our Team</a></li>
-                        <li><a class="js-link js-anchor" href="#contacts">Contacts</a></li>
+                        <li><a class="js-link js-anchor" href="#testimonials">Testimonios</a></li>
+                        <li><a class="js-link js-anchor" href="#team">Terapeutas</a></li>
+                        <li><a class="js-link js-anchor" href="#contacts">Contactanos</a></li>
                     </ul>
                 </nav>
             </div>
