--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
         <div class="home-section__overlay">
             <div class="container">
                 <header class="home-section__header">
-                    <p class="home-section__header-label">We Are</p>
-                    <h1>Marketing Agency</h1>
-                    <h2>Lorem ipsum dolor sit amet</h2>
+                    <p class="home-section__header-label">Reserva tu</p>
+                    <h1>MASAJE</h1>
+                    <h2>Atendemos de lunes a sábados, 9am a 9pm</h2>
                 </header>
             </div>
         </div>
@@ -67,22 +67,19 @@
         <div class="container">
             <div class="about-section__card">
                 <header class="about-section__card-header">
-                    <h2>Lorem ipsum!</h2>
-                    <h4>Curabitur accumsan nulla ut velit facilisis</h4>
+                    <h2>¡Somos Intikilla!</h2>
+                    <h4>Terapeutas con más de 10 años de experiencia</h4>
                 </header>
                 <div class="about-section__card-info">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla lacinia nulla vel ornare interdum.
-                        Donec posuere leo ut justo imperdiet, ut congue lorem faucibus. Aliquam fringilla felis at est
-                        tincidunt efficitur. Phasellus enim ipsum, porttitor et urna ac, finibus finibus eros.</p>
+                    <p>Intikilla está conformado por un equipo de terapeutas videntes e invidentes.
+                    </p>
                     <blockquote>
-                        <p>Donec non tincidunt massa. Vestibulum vel ultrices velit. Integer eget nibh vitae velit
-                            condimentum viverra vel eget diam. Ut facilisis finibus nisi ac feugiat. Nullam consectetur
-                            neque in est posuere feugiat et nec arcu. Pellentesque sit amet sapien lorem.</p>
+                        <p>Aspiramos ser un grupo socialmente responsable y comprometido con el bienestar
+                            de sus clientes.
+                        </p>
                     </blockquote>
-                    <p>Nunc non venenatis odio. Nullam id neque et lectus suscipit mattis ac a ante. Suspendisse
-                        potenti. Aliquam in nulla sem. Vivamus sodales malesuada leo, sit amet cursus nunc vulputate
-                        aliquet. Proin porttitor ex facilisis aliquam efficitur. Vestibulum scelerisque nisl ac ex
-                        rutrum, quis aliquet nibh ultrices.</p>
+                    <p>Los masajes que ofrece permiten aliviar el dolor de cabeza, de columna, de piernas, de pies 
+                        contrarrestar el insomnio, la migraña y calmar el malestar de las várices.</p>
                 </div>
             </div>
         </div>
@@ -90,8 +87,8 @@
     <section class="common-section" id="services">
         <div class="container">
             <header class="common-section__header">
-                <h2>Services</h2>
-                <h4>Quisque sollicitudin at lorem vitae gravida</h4>
+                <h2>Nuestros servicios</h2>
+                <h4>Ofrecemos los siguientes masajes terapeuticos</h4>
             </header>
             <div class="grid-container">
                 <ul class="services services_advisory">
@@ -144,7 +141,7 @@
                     </li>
                 </ul>
                 <div class="advantages">
-                    <h2>Why Choose Us?</h2>
+                    <h2>¿Por qué ir a intikilla?</h2>
                     <blockquote>
                         <p>Morbi vel orci at ante posuere consequat vel auctor dui. Quisque imperdiet elementum
                             suscipit. Duis dapibus ante vel quam ullamcorper, a accumsan dui viverra. Donec accumsan
