--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
                             de sus clientes.
                         </p>
                     </blockquote>
-                    <p>Los masajes que ofrece permiten aliviar el dolor de cabeza, de columna, de piernas, de pies 
-                        contrarrestar el insomnio, la migraña y calmar el malestar de las várices.</p>
+                    <!-- <p>Los masajes que ofrece permiten aliviar el dolor de cabeza, de columna, de piernas, de pies 
+                        contrarrestar el insomnio, la migraña y calmar el malestar de las várices.</p> -->
                 </div>
             </div>
         </div>
@@ -157,8 +157,8 @@
     <section class="common-section" id="process">
         <div class="container">
             <header class="common-section__header">
-                <h2>How It Works</h2>
-                <h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur aliquam interdum tortor</h4>
+                <h2>¿Cómo reservar?</h2>
+                <h4>Reserva tu sesión de masaje en solo 4 pasos</h4>
             </header>
             <div class="grid-container">
                 <ul class="process">
@@ -166,27 +166,25 @@
                         <div class="process__step-icon icon icon_research is-active"></div>
                     </li>
                     <li class="process__step-info process__step-info_research is-active">
-                        <h3><span>Step 1</span> &mdash; Quisque a quam ante</h3>
-                        <p>Proin mattis ex vel turpis interdum, in fringilla nibh tristique. Lorem ipsum dolor sit amet,
-                            consectetur adipiscing elit. Cras id ipsum in diam aliquam sodales.</p>
+                        <h3><span>Paso 1</span> &mdash; Búscanos en facebook o llámanos</h3>
+                        <p>Realiza una llamada al (01) 346 0273 o encuentranos en facebook por "Masajes Intikilla".</p>
                     </li>
                     <li class="process__step process__step_develop">
                         <div class="process__step-icon icon icon_develop"></div>
                     </li>
                     <li class="process__step-info process__step-info_develop">
-                        <h3><span>Step 2</span> &mdash; Aliquam erat volutpat</h3>
-                        <p>Nullam laoreet lacus et ante consequat pharetra. Nam non felis tincidunt, auctor eros at,
-                            semper eros. Mauris feugiat a nibh et luctus.</p>
+                        <h3><span>Paso 2</span> &mdash; Indícanos tu disponibilidad</h3>
+                        <p>Recuerda que Intikilla atiende de Lunes a sábado de 9am a 9pm.</p>
                     </li>
-                    <li class="process__step process__step_deploy">
+                    <!-- <li class="process__step process__step_deploy">
                         <div class="process__step-icon icon icon_deploy"></div>
                     </li>
                     <li class="process__step-info process__step-info_deploy">
-                        <h3><span>Step 3</span> &mdash; Curabitur accumsan nulla</h3>
+                        <h3><span>Paso 3</span> &mdash; Curabitur accumsan nulla</h3>
                         <p>Donec lobortis, est iaculis rutrum feugiat, orci est ultrices mauris, in rhoncus dolor eros
                             non sem. Duis feugiat, metus eu ullamcorper accumsan, massa risus dictum nisi, sit amet
                             ultricies lectus nisl eu libero.</p>
-                    </li>
+                    </li> -->
                     <li class="process__step process__step_deliver">
                         <div class="process__step-icon icon icon_deliver"></div>
                     </li>
