--- a/index.html
+++ b/index.html
@@ -157,8 +157,8 @@
     <section class="common-section" id="process">
         <div class="container">
             <header class="common-section__header">
-                <h2>¿Cómo reservar?</h2>
-                <h4>Reserva tu sesión de masaje en solo 4 pasos</h4>
+                <h2>¿Quiero reservar?</h2>
+                <h4>Reserva tu sesión de masaje en solo 3 pasos</h4>
             </header>
             <div class="grid-container">
                 <ul class="process">
@@ -166,15 +166,15 @@
                         <div class="process__step-icon icon icon_research is-active"></div>
                     </li>
                     <li class="process__step-info process__step-info_research is-active">
-                        <h3><span>Paso 1</span> &mdash; Búscanos en facebook o llámanos</h3>
-                        <p>Realiza una llamada al (01) 346 0273 o encuentranos en facebook por "Masajes Intikilla".</p>
+                        <h3><span>Paso 1</span> &mdash; Busca nuestra web, facebook o llámanos</h3>
+                        <p>Realiza una llamada al (01) 346 0273 ó envíanos un mensaje en esta web o en el facebook "Masajes Intikilla".</p>
                     </li>
                     <li class="process__step process__step_develop">
                         <div class="process__step-icon icon icon_develop"></div>
                     </li>
                     <li class="process__step-info process__step-info_develop">
                         <h3><span>Paso 2</span> &mdash; Indícanos tu disponibilidad</h3>
-                        <p>Recuerda que Intikilla atiende de Lunes a sábado de 9am a 9pm.</p>
+                        <p>La reserva será válida durante 2 días. Recuerda que Intikilla atiende de Lunes a sábado de 9am a 9pm.</p>
                     </li>
                     <!-- <li class="process__step process__step_deploy">
                         <div class="process__step-icon icon icon_deploy"></div>
@@ -189,9 +189,8 @@
                         <div class="process__step-icon icon icon_deliver"></div>
                     </li>
                     <li class="process__step-info process__step-info_deliver">
-                        <h3><span>Step 4</span> &mdash; Fusce aliquam lorem</h3>
-                        <p>Donec non ligula imperdiet, tincidunt quam ut, pellentesque nisi. Quisque est ante, faucibus
-                            a urna nec, vehicula pellentesque lectus.</p>
+                        <h3><span>Paso 3</span> &mdash; Confirmación de la reserva</h3>
+                        <p>Intikilla le confirmará el día y/o la hora. Para respetar a nuestros clientes le pediremos llegar 5 minutos de anticipación. </p>
                     </li>
                 </ul>
             </div>
