--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
     <section class="common-section" id="process">
         <div class="container">
             <header class="common-section__header">
-                <h2>¿Quiero reservar?</h2>
+                <h2>¿Quiero reservars?</h2>
                 <h4>Reserva tu sesión de masaje en solo 3 pasos</h4>
             </header>
             <div class="grid-container">
