--- a/index.html
+++ b/index.html
@@ -157,8 +157,8 @@
     <section class="common-section" id="process">
         <div class="container">
             <header class="common-section__header">
-                <h2>¿Quiero reservars?</h2>
-                <h4>Reserva tu sesión de masaje en solo 3 pasos</h4>
+                <h2>¿Puedo reservar desde mi casa o trabajo?</h2>
+                <h4>¡Sí! Reserva tu sesión de masaje en solo 3 pasos</h4>
             </header>
             <div class="grid-container">
                 <ul class="process">
@@ -198,7 +198,7 @@
     </section><!-- Projects section-->
     <section class="common-section" id="projects">
         <header class="common-section__header">
-            <h2>Projects</h2>
+            <h2>Nuestros servicios</h2>
             <p>Donec lorem ante, efficitur ut blandit eu, sollicitudin sed mi</p>
         </header>
         <div class="projects-wrap">
@@ -206,44 +206,38 @@
                 <div class="projects">
                     <figure class="projects__item"><img src="static/images/projects/1.jpg"
                             alt="Lorem ipsum dolor sit amet, consectetur adipiscing elit">
-                        <figcaption><a class="icon icon_link" href="#" rel="nofollow">Lorem ipsum dolor sit amet,
-                                consectetur adipiscing elit</a></figcaption>
+                        <figcaption><a class="icon icon_link" href="#" rel="nofollow">Masaje descontracturante</a></figcaption>
                     </figure>
                     <figure class="projects__item"><img src="static/images/projects/2.jpg"
                             alt="Donec lobortis, est iaculis rutrum feugiat">
-                        <figcaption><a class="icon icon_link" href="#" rel="nofollow">Donec lobortis, est iaculis rutrum
-                                feugiat</a></figcaption>
+                        <figcaption><a class="icon icon_link" href="#" rel="nofollow">Masaje relajante</a></figcaption>
                     </figure>
                     <figure class="projects__item"><img src="static/images/projects/5.jpg"
                             alt="Duis feugiat, metus eu ullamcorper accumsan, massa risus dictum nisi">
-                        <figcaption><a class="icon icon_link" href="#" rel="nofollow">Duis feugiat, metus eu ullamcorper
-                                accumsan, massa risus dictum nisi</a></figcaption>
+                        <figcaption><a class="icon icon_link" href="#" rel="nofollow">Masaje deportivo</a></figcaption>
                     </figure>
-                    <figure class="projects__item"><img src="static/images/projects/6.jpg"
+                    <!-- <figure class="projects__item"><img src="static/images/projects/6.jpg"
                             alt="Donec non ligula imperdiet, tincidunt quam ut, pellentesque nisi">
                         <figcaption><a class="icon icon_link" href="#" rel="nofollow">Donec non ligula imperdiet,
                                 tincidunt quam ut, pellentesque nisi</a></figcaption>
-                    </figure>
+                    </figure> -->
                     <figure class="projects__item"><img src="static/images/projects/3.jpg"
                             alt="Mauris a sem semper, maximus metus vitae, efficitur turpis">
-                        <figcaption><a class="icon icon_link" href="#" rel="nofollow">Mauris a sem semper, maximus metus
-                                vitae, efficitur turpis</a></figcaption>
+                        <figcaption><a class="icon icon_link" href="#" rel="nofollow">Masaje energético</a></figcaption>
                     </figure>
                     <figure class="projects__item"><img src="static/images/projects/4.jpg"
                             alt="Nunc sit amet massa id sem pretium luctus">
-                        <figcaption><a class="icon icon_link" href="#" rel="nofollow">Nunc sit amet massa id sem pretium
-                                luctus</a></figcaption>
+                        <figcaption><a class="icon icon_link" href="#" rel="nofollow">Acupuntura</a></figcaption>
                     </figure>
                     <figure class="projects__item"><img src="static/images/projects/7.jpg"
                             alt="Nunc elementum arcu sit amet erat sodales fringilla">
-                        <figcaption><a class="icon icon_link" href="#" rel="nofollow">Nunc elementum arcu sit amet erat
-                                sodales fringilla</a></figcaption>
+                        <figcaption><a class="icon icon_link" href="#" rel="nofollow">Masaje en los pies</a></figcaption>
                     </figure>
-                    <figure class="projects__item"><img src="static/images/projects/8.jpg"
+                    <!-- <figure class="projects__item"><img src="static/images/projects/8.jpg"
                             alt="Cras condimentum venenatis aliquet">
                         <figcaption><a class="icon icon_link" href="#" rel="nofollow">Cras condimentum venenatis
                                 aliquet</a></figcaption>
-                    </figure>
+                    </figure> -->
                 </div>
             </div>
         </div>
