--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             </div>
         </div>
     </section><!-- Services section-->
-    <section class="common-section" id="services">
+    <!-- <section class="common-section" id="services">
         <div class="container">
             <header class="common-section__header">
                 <h2>Nuestros servicios</h2>
@@ -153,7 +153,7 @@
                 </div>
             </div>
         </div>
-    </section><!-- Process section-->
+    </section>Process section -->
     <section class="common-section" id="process">
         <div class="container">
             <header class="common-section__header">
