--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             </div>
         </div>
     </section><!-- Services section-->
-    <!-- <section class="common-section" id="services">
+<!--     <section class="common-section" id="services">
         <div class="container">
             <header class="common-section__header">
                 <h2>Nuestros servicios</h2>
@@ -153,8 +153,8 @@
                 </div>
             </div>
         </div>
-    </section>Process section -->
-    <section class="common-section" id="process">
+    </section><--Process section-->
+ -->    <section class="common-section" id="process">
         <div class="container">
             <header class="common-section__header">
                 <h2>¿Puedo reservar desde mi casa o trabajo?</h2>
@@ -242,7 +242,7 @@
             </div>
         </div>
     </section><!-- Testimonials section-->
-    <section class="common-section" id="testimonials">
+    <!-- <section class="common-section" id="testimonials">
         <div class="container">
             <header class="common-section__header">
                 <h2>Testimonials</h2>
@@ -315,47 +315,43 @@
                 </ul>
             </div>
         </div>
-    </section><!-- Team section-->
+    </section>Team section -->
     <section class="common-section" id="team">
         <div class="container">
             <header class="common-section__header">
-                <h2>Our Team</h2>
-                <p>Donec convallis pretium erat in varius</p>
+                <h2>Nuestro equipo</h2>
+                <p>Conformado por terapistas videntes e invidentes</p>
             </header>
             <div class="team">
                 <div class="team__member"><img src="static/images/team/1.jpg" alt="Veronica Hunt">
                     <div class="team__member-info">
-                        <h3 class="team__member-name">Veronica Hunt</h3>
-                        <p class="team__member-role">CEO</p>
-                        <p class="team__member-descr">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla
-                            lacinia nulla vel ornare interdum.</p>
+                        <h3 class="team__member-name">Lorena</h3>
+                        <p class="team__member-role">Terapista en jefe</p>
+                        <p class="team__member-descr">Experta en acupuntura.</p>
                     </div>
                 </div>
                 <div class="team__member"><img src="static/images/team/2.jpg" alt="Rene Thompson">
                     <div class="team__member-info">
-                        <h3 class="team__member-name">Rene Thompson</h3>
-                        <p class="team__member-role">Project Manager</p>
-                        <p class="team__member-descr">Nunc non venenatis odio. Nullam id neque et lectus suscipit mattis
-                            ac a ante. Suspendisse potenti.</p>
+                        <h3 class="team__member-name">Jesimar</h3>
+                        <p class="team__member-role">Terapista</p>
+                        <p class="team__member-descr">Experta en masaje descontracturante.</p>
                     </div>
                 </div>
                 <div class="team__member"><img src="static/images/team/3.jpg" alt="David Lynch">
                     <div class="team__member-info">
-                        <h3 class="team__member-name">David Lynch</h3>
-                        <p class="team__member-role">Project Manager</p>
-                        <p class="team__member-descr">Nunc non venenatis odio. Nullam id neque et lectus suscipit mattis
-                            ac a ante. Suspendisse potenti. Aliquam in nulla sem.</p>
+                        <h3 class="team__member-name">Solange</h3>
+                        <p class="team__member-role">Terapista</p>
+                        <p class="team__member-descr">Experta en masaje relajante.</p>
                     </div>
                 </div>
                 <div class="team__member"><img src="static/images/team/4.jpg" alt="Ann Hernandez">
                     <div class="team__member-info">
-                        <h3 class="team__member-name">Ann Hernandez</h3>
-                        <p class="team__member-role">Graphic Designer</p>
-                        <p class="team__member-descr">Ut wisi enim ad minim veniam, quis nostrud exerci tation
-                            ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p>
+                        <h3 class="team__member-name">Corina</h3>
+                        <p class="team__member-role">Terapista</p>
+                        <p class="team__member-descr">Experta en masaje en los pies.</p>
                     </div>
                 </div>
-                <div class="team__member"><img src="static/images/team/5.jpg" alt="Arlene Barnett">
+                <!-- <div class="team__member"><img src="static/images/team/5.jpg" alt="Arlene Barnett">
                     <div class="team__member-info">
                         <h3 class="team__member-name">Arlene Barnett</h3>
                         <p class="team__member-role">Web Designer</p>
@@ -378,7 +374,7 @@
                         <p class="team__member-descr">Nunc non venenatis odio. Nullam id neque et lectus suscipit mattis
                             ac a ante. Aliquam in nulla sem.</p>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
     </section><!-- Contacts section-->
@@ -386,26 +382,28 @@
         <div class="container">
             <section class="contact-card">
                 <header class="contact-card__header">
-                    <h2>Contact Information</h2>
-                    <h4>Mauris leo nisl, malesuada id faucibus non, gravida sit amet lectus</h4>
+                    <h2>Dónde nos encontramos</h2>
+                    <h4>Estamos también en facebook</h4>
                 </header>
                 <div class="contact-info">
-                    <div class="contact-info__logo">MA</div>
+                    <div class="contact-info__logo">IK</div>
                     <div class="contact-info__group">
                         <div class="contact-info__additional">
-                            <p>Donec lorem ante, efficitur?</p>
-                            <p>Sed aliquet sagittis odio commodo facilisis?</p>
-                            <p>Vivamus vel lacus tellus?</p>
+                            <p>Referencia: Altura de la cdra. 34 de Canadá</p>
+                            <p>Por el Banco Scotiabank</p>
+                            <p><i>cuenta con estacionamiento</i></p>
                         </div>
                         <div class="contact-info__vcard vcard">
-                            <h4 class="fn org">Marketing Agency</h4>
-                            <p class="role title">Lorem ipsum dolor sit amet</p>
-                            <p class="icon icon_location"><a class="adr js-anchor" href="#gmap"><span
-                                        class="country-name">CountryName</span>,&nbsp;<span
-                                        class="locality">CityName</span>,&nbsp;<span class="address">Address</span></a>
+                            <h4 class="fn org">Local Intikilla</h4>
+                            <p class="role title">2do piso</p>
+                            <p class="icon icon_location"><a class="adr js-anchor" href="#gmap">
+                                <!--<span
+                                        class="country-name">CountryName</span>,&nbsp;-->
+                                        <span
+                                        class="locality">Jirón Alicante 395</span>,&nbsp;<span class="address">San Luis</span></a>
                             </p>
                             <p class="icon icon_mail"><a class="email"
-                                    href="mailto:contact@example.com">contact@example.com</a></p>
+                                    href="mailto:contact@example.com">masajes.intikilla@gmail.com</a></p>
                             <p class="icon icon_phone"><a class="email" href="tel:1111111111">111-111-11-11</a></p>
                         </div>
                         <ul class="contact-info__social">
@@ -426,7 +424,7 @@
         <div class="container">
             <p class="main-footer__copyright">&copy;&nbsp;<span>Marketing Agency</span></p><a
                 class="main-footer__gotop icon icon_gotop js-anchor" href="#home">To top!</a>
-            <p class="main-footer__links">Designed by&nbsp;<a href="http://orlovmax.com">Maxim Orlov</a></p>
+            <!--<p class="main-footer__links">Designed by&nbsp;<a href="http://orlovmax.com">Maxim Orlov</a></p>-->
         </div>
     </footer>
     <script src="static/js/body.min.js"></script>
