--- a/index.html
+++ b/index.html
@@ -162,13 +162,13 @@
             </header>
             <div class="grid-container">
                 <ul class="process">
-                    <li class="process__step process__step_research">
+                    <!-- <li class="process__step process__step_research">
                         <div class="process__step-icon icon icon_research is-active"></div>
                     </li>
                     <li class="process__step-info process__step-info_research is-active">
                         <h3><span>Paso 1</span> &mdash; Busca nuestra web, facebook o llámanos</h3>
                         <p>Realiza una llamada al (01) 346 0273 ó envíanos un mensaje en esta web o en el facebook "Masajes Intikilla".</p>
-                    </li>
+                    </li> -->
                     <li class="process__step process__step_develop">
                         <div class="process__step-icon icon icon_develop"></div>
                     </li>
