--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                         <h3><span>Paso 2</span> &mdash; Indícanos tu disponibilidad</h3>
                         <p>La reserva será válida durante 2 días. Recuerda que Intikilla atiende de Lunes a sábado de 9am a 9pm.</p>
                     </li>
-                    <!-- <li class="process__step process__step_deploy">
+                    <li class="process__step process__step_deploy">
                         <div class="process__step-icon icon icon_deploy"></div>
                     </li>
                     <li class="process__step-info process__step-info_deploy">
@@ -184,14 +184,14 @@
                         <p>Donec lobortis, est iaculis rutrum feugiat, orci est ultrices mauris, in rhoncus dolor eros
                             non sem. Duis feugiat, metus eu ullamcorper accumsan, massa risus dictum nisi, sit amet
                             ultricies lectus nisl eu libero.</p>
-                    </li> -->
-                    <li class="process__step process__step_deliver">
+                    </li>
+                    <!-- <li class="process__step process__step_deliver">
                         <div class="process__step-icon icon icon_deliver"></div>
                     </li>
                     <li class="process__step-info process__step-info_deliver">
                         <h3><span>Paso 3</span> &mdash; Confirmación de la reserva</h3>
                         <p>Intikilla le confirmará el día y/o la hora. Para respetar a nuestros clientes le pediremos llegar 5 minutos de anticipación. </p>
-                    </li>
+                    </li> -->
                 </ul>
             </div>
         </div>
