--- a/index.html
+++ b/index.html
@@ -170,7 +170,8 @@
                         <p>Realiza una llamada al (01) 346 0273 ó envíanos un mensaje en esta web o en el facebook "Masajes Intikilla".</p>
                     </li> -->
                     <li class="process__step process__step_develop">
-                        <div class="process__step-icon icon icon_develop"></div>
+                        <!-- <div class="process__step-icon icon icon_develop"></div> -->
+                        <div class="process__step-icon icon icon_research is-active"></div>
                     </li>
                     <li class="process__step-info process__step-info_develop">
                         <h3><span>Paso 2</span> &mdash; Indícanos tu disponibilidad</h3>
