Css y texto de animacion pasos

--- a/index.html
+++ b/index.html
@@ -157,8 +157,8 @@
  -->    <section class="common-section" id="process">
         <div class="container">
             <header class="common-section__header">
-                <h2>¿Puedo reservar desde mi casa o trabajo?</h2>
-                <h4>¡Sí! Reserva tu sesión de masaje en solo 3 pasos</h4>
+                <h2>Reserva tu masaje en solo 2 pasos</h2>
+                <h4>La reserva es válida durante dos días. Intikilla atiende de lunes a sábados 9am a 9pm.s</h4>
             </header>
             <div class="grid-container">
                 <ul class="process">
@@ -174,16 +174,16 @@
                         <div class="process__step-icon icon icon_research is-active"></div>
                     </li>
                     <li class="process__step-info process__step-info_develop">
-                        <h3><span>Paso 2</span> &mdash; Indícanos tu disponibilidad</h3>
-                        <p>La reserva será válida durante 2 días. Recuerda que Intikilla atiende de Lunes a sábado de 9am a 9pm.</p>
+                        <h3><span>Paso 1</span> &mdash; Indícanos tu disponibilidad</h3>
+                        <p>Llámanos al (01) 346 0273 ó envíanos un mensaje en esta web o al facebook "Masajes Intikilla".</p>
                     </li>
                     <li class="process__step process__step_deploy">
                         <!-- <div class="process__step-icon icon icon_deploy"></div> -->
                         <div class="process__step-icon icon icon_deliver"></div>
                     </li>
                     <li class="process__step-info process__step-info_deploy">
-                        <h3><span>Paso 3</span> &mdash; Confirmación de la reserva</h3>
-                        <p>Intikilla le confirmará el día y/o la hora. Para respetar a nuestros clientes le pediremos llegar 5 minutos de anticipación.</p>
+                        <h3><span>Paso 2</span> &mdash; Confirmación de la reserva</h3>
+                        <p>Intikilla le confirmará el día y/o la hora. Le sugerimos llegar con 5 minutos de anticipación.</p>
                     </li>
                     <!-- <li class="process__step process__step_deliver">
                         <div class="process__step-icon icon icon_deliver"></div>
