--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
         <div class="container">
             <header class="common-section__header">
                 <h2>Reserva tu masaje en solo 2 pasos</h2>
-                <h4>La reserva es válida durante dos días. Intikilla atiende de lunes a sábados 9am a 9pm.s</h4>
+                <h4>La reserva es válida durante dos días. Intikilla atiende de lunes a sábados 9am a 9pm.</h4>
             </header>
             <div class="grid-container">
                 <ul class="process">
@@ -199,7 +199,7 @@
     <section class="common-section" id="projects">
         <header class="common-section__header">
             <h2>Nuestros servicios</h2>
-            <p>Donec lorem ante, efficitur ut blandit eu, sollicitudin sed mi</p>
+            <p>El cobro de los masajes es por tiempo de la sesióon. Usted puede indicar al terapista alguno de los siguientes masajes.</p>
         </header>
         <div class="projects-wrap">
             <div class="grid-container">
