--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
                 <nav class="first-nav__links">
                     <ul>
                         <li><a class="is-selected">castellano</a></li>
-                        <li><a href="#">inglés</a></li>
-                        <li><a href="#">holandes</a></li>
+                        <!-- <li><a href="#">inglés</a></li> -->
+                        <!-- <li><a href="#">holandes</a></li> -->
                     </ul>
                 </nav><a class="first-nav__navcontrol icon icon_menu js-navcontrol" href="#">Menu</a>
             </div>
@@ -38,14 +38,14 @@
             <div class="container"><a class="second-nav__logo"><span>MA</span></a>
                 <nav class="menu">
                     <ul>
-                        <li><a class="js-link js-anchor is-selected" href="#home">Home</a></li>
-                        <li><a class="js-link js-anchor" href="#about">Nosotros</a></li>
-                        <li><a class="js-link js-anchor" href="#services">Servicios</a></li>
-                        <li><a class="js-link js-anchor" href="#process">Reserva</a></li>
-                        <li><a class="js-link js-anchor" href="#projects">Projects</a></li>
-                        <li><a class="js-link js-anchor" href="#testimonials">Testimonios</a></li>
+                        <li><a class="js-link js-anchor is-selected" href="#home">Inicio</a></li>
+                        <li><a class="js-link js-anchor" href="#about">Sobre Intikilla</a></li>
+                        <!-- <li><a class="js-link js-anchor" href="#services">Servicios</a></li> -->
+                        <li><a class="js-link js-anchor" href="#process">Cómo Reservar</a></li>
+                        <li><a class="js-link js-anchor" href="#projects">Servicios</a></li>
+                        <!-- <li><a class="js-link js-anchor" href="#testimonials">Testimonios</a></li> -->
                         <li><a class="js-link js-anchor" href="#team">Terapeutas</a></li>
-                        <li><a class="js-link js-anchor" href="#contacts">Contactanos</a></li>
+                        <li><a class="js-link js-anchor" href="#contacts">Contáctanos</a></li>
                     </ul>
                 </nav>
             </div>
