--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
                         <!-- <li><a href="#">inglés</a></li> -->
                         <!-- <li><a href="#">holandes</a></li> -->
                     </ul>
-                </nav><a class="first-nav__navcontrol icon icon_menu js-navcontrol" href="#">Menu</a>
+                </nav><a class="first-nav__navcontrol icon icon_menu js-navcontrol" href="#">Menú</a>
             </div>
         </div>
         <div class="second-nav js-nav">
-            <div class="container"><a class="second-nav__logo"><span>MA</span></a>
+            <div class="container"><a class="second-nav__logo"><span>IK</span></a>
                 <nav class="menu">
                     <ul>
                         <li><a class="js-link js-anchor is-selected" href="#home">Inicio</a></li>
