--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
             </div>
         </div>
     </section><--Process section-->
- -->    <section class="common-section" id="process">
+    <section class="common-section" id="process">
         <div class="container">
             <header class="common-section__header">
                 <h2>Reserva tu masaje en solo 2 pasos</h2>
