imagenes transición cambio
colores

--- a/index.html
+++ b/index.html
@@ -408,11 +408,11 @@
                         </div>
                         <ul class="contact-info__social">
                             <li><a class="icon icon_fb" rel="nofollow">I'm on Facebook</a></li>
-                            <li><a class="icon icon_twi" rel="nofollow">My Twitter</a></li>
-                            <li><a class="icon icon_gplus" rel="nofollow">I'm on Google+</a></li>
-                            <li><a class="icon icon_vk" rel="nofollow">I'm in Vk</a></li>
-                            <li><a class="icon icon_in" rel="nofollow">My Linkedin profile</a></li>
-                            <li><a class="icon icon_rss" rel="nofollow">RSS feed... maybe</a></li>
+                            <!-- <li><a class="icon icon_twi" rel="nofollow">My Twitter</a></li> -->
+                            <!-- <li><a class="icon icon_gplus" rel="nofollow">I'm on Google+</a></li> -->
+                            <!-- <li><a class="icon icon_vk" rel="nofollow">I'm in Vk</a></li> -->
+                            <!-- <li><a class="icon icon_in" rel="nofollow">My Linkedin profile</a></li> -->
+                            <!-- <li><a class="icon icon_rss" rel="nofollow">RSS feed... maybe</a></li> -->
                         </ul>
                     </div>
                 </div>
@@ -422,7 +422,7 @@
     </div><!-- Footer-->
     <footer class="main-footer">
         <div class="container">
-            <p class="main-footer__copyright">&copy;&nbsp;<span>Marketing Agency</span></p><a
+            <p class="main-footer__copyright">&copy;&nbsp;<span>Intikilla 2019</span></p><a
                 class="main-footer__gotop icon icon_gotop js-anchor" href="#home">To top!</a>
             <!--<p class="main-footer__links">Designed by&nbsp;<a href="http://orlovmax.com">Maxim Orlov</a></p>-->
         </div>
