--- a/index.html
+++ b/index.html
@@ -319,8 +319,8 @@
     <section class="common-section" id="team">
         <div class="container">
             <header class="common-section__header">
-                <h2>Nuestro equipo</h2>
-                <p>Conformado por terapistas videntes e invidentes</p>
+                <h2>Nuestros terpeutas</h2>
+                <p>Conformado por personas invidentes y videntes</p>
             </header>
             <div class="team">
                 <div class="team__member"><img src="static/images/team/1.jpg" alt="Veronica Hunt">
