--- a/index.html
+++ b/index.html
@@ -18,9 +18,35 @@
     <link rel="stylesheet" href="static/css/screen.min.css">
     <link rel="stylesheet" href="static/css/custom.min.css">
     <script src="static/js/head.min.js"></script>
+    <script src="static/js/body.min.js"></script>
+    <!-- Load Facebook SDK for JavaScript -->
+    <div id="fb-root"></div>
+    <script>
+    window.fbAsyncInit = function() {
+        FB.init({
+        xfbml            : true,
+        version          : 'v3.3'
+        });
+    };
+
+    (function(d, s, id) {
+    var js, fjs = d.getElementsByTagName(s)[0];
+    if (d.getElementById(id)) return;
+    js = d.createElement(s); js.id = id;
+    js.src = 'https://connect.facebook.net/es_LA/sdk/xfbml.customerchat.js';
+    fjs.parentNode.insertBefore(js, fjs);
+    }(document, 'script', 'facebook-jssdk'));</script>
 </head>
 
 <body>
+    <!-- Your customer chat code -->
+    <div class="fb-customerchat"
+    attribution=setup_tool
+    page_id="401112260732647"
+    theme_color="#00A32E"
+    logged_in_greeting="¡presiona AQUÍ para reservar tu sesión de masaje!"
+    logged_out_greeting="¡presiona AQUÍ para reservar tu sesión de masaje!">
+    </div>
     <!-- Header-->
     <header class="main-header">
         <div class="first-nav">
@@ -427,33 +453,7 @@
             <!--<p class="main-footer__links">Designed by&nbsp;<a href="http://orlovmax.com">Maxim Orlov</a></p>-->
         </div>
     </footer>
-    <script src="static/js/body.min.js"></script>
-    <!-- Load Facebook SDK for JavaScript -->
-    <div id="fb-root"></div>
-    <script>
-    window.fbAsyncInit = function() {
-        FB.init({
-        xfbml            : true,
-        version          : 'v3.3'
-        });
-    };
 
-    (function(d, s, id) {
-    var js, fjs = d.getElementsByTagName(s)[0];
-    if (d.getElementById(id)) return;
-    js = d.createElement(s); js.id = id;
-    js.src = 'https://connect.facebook.net/es_LA/sdk/xfbml.customerchat.js';
-    fjs.parentNode.insertBefore(js, fjs);
-    }(document, 'script', 'facebook-jssdk'));</script>
-
-    <!-- Your customer chat code -->
-    <div class="fb-customerchat"
-    attribution=setup_tool
-    page_id="401112260732647"
-    theme_color="#00A32E"
-    logged_in_greeting="¡Click aquí para reservar tu sesión de masaje!"
-    logged_out_greeting="¡Click aquí para reservar tu sesión de masaje!">
-    </div>
 </body>
 
 </html>
