--- a/index.html
+++ b/index.html
@@ -39,11 +39,12 @@
 </head>
 
 <body>
-    <!-- Your customer chat code -->
+    <!-- Your customer chat code 
+    minimized="false"-->
     <div class="fb-customerchat"
     attribution=setup_tool
     page_id="401112260732647"
-    minimized="false"
+    
     theme_color="#00A32E"
     logged_in_greeting="¡presiona AQUÍ para reservar tu sesión de masaje!"
     logged_out_greeting="¡presiona AQUÍ para reservar tu sesión de masaje!">
