--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
     js = d.createElement(s); js.id = id;
     js.src = 'https://connect.facebook.net/es_LA/sdk/xfbml.customerchat.js';
     fjs.parentNode.insertBefore(js, fjs);
-    }(document, 'script', 'facebook-jssdk'));</script>
+    }(document, 'script', 'facebook-jssdk'));
+    FB.CustomerChat.showDialog();
+    </script>
 </head>
 
 <body>
