--- a/index.html
+++ b/index.html
@@ -36,7 +36,12 @@
     js.src = 'https://connect.facebook.net/es_LA/sdk/xfbml.customerchat.js';
     fjs.parentNode.insertBefore(js, fjs);
     }(document, 'script', 'facebook-jssdk'));
-    FB.CustomerChat.showDialog();
+    // FB.CustomerChat.showDialog();
+    FB.CustomerChat.update({  
+    logged_in_greeting: 'Hello There!',
+    logged_out_greeting: 'Log in to Chat with Us',  
+    ref: 'coupon_15',
+    });
     </script>
 </head>
 
