--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <div class="container">
                 <nav class="first-nav__links">
                     <ul>
-                        <li><a class="is-selected">castellano</a></li>
+                        <li><a class="is-selected">castellanos</a></li>
                         <!-- <li><a href="#">inglés</a></li> -->
                         <!-- <li><a href="#">holandes</a></li> -->
                     </ul>
