--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
     page_id="401112260732647"
     
     theme_color="#00A32E"
+    greeting_dialog_display="hide"
     logged_in_greeting="¡presiona AQUÍ para reservar tu sesión de masaje!"
     logged_out_greeting="¡presiona AQUÍ para reservar tu sesión de masaje!">
     
