--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <div class="container">
                 <nav class="first-nav__links">
                     <ul>
-                        <li><a class="is-selected">castellanssos</a></li>
+                        <li><a class="is-selected">castellansssos</a></li>
                         <!-- <li><a href="#">inglés</a></li> -->
                         <!-- <li><a href="#">holandes</a></li> -->
                     </ul>
