--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <div class="container">
                 <nav class="first-nav__links">
                     <ul>
-                        <li><a class="is-selected">castellansssoss</a></li>
+                        <li><a class="is-selected">castellaaansssoss</a></li>
                         <!-- <li><a href="#">inglés</a></li> -->
                         <!-- <li><a href="#">holandes</a></li> -->
                     </ul>
