--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     
     theme_color="#00A32E"
     greeting_dialog_display="show"
-    greeting_dialog_delay="0.5"
+    greeting_dialog_delay="1"
     logged_in_greeting="¡presiona AQUÍ para reservar tu sesión de masaje!"
     logged_out_greeting="¡presiona en INICIAR SESIÓN para reservar tu sesión de masaje!">
     
@@ -62,7 +62,7 @@
             <div class="container">
                 <nav class="first-nav__links">
                     <ul>
-                        <li><a class="is-selected">castellaaansssoss</a></li>
+                        <li><a class="is-selected">caastellaaansssoss</a></li>
                         <!-- <li><a href="#">inglés</a></li> -->
                         <!-- <li><a href="#">holandes</a></li> -->
                     </ul>
